[gd_scene load_steps=4 format=3 uid="uid://bc337hu5vphog"]

[ext_resource type="Script" path="res://Scenes/InitialCreate/initial_create.gd" id="1_3pfmw"]
[ext_resource type="FontFile" uid="uid://ch1yfvb3bpbgv" path="res://Assets/Font/Sedgwick_Ave/SedgwickAve-Regular.ttf" id="1_arltj"]

[sub_resource type="LabelSettings" id="LabelSettings_o07i8"]
font = ExtResource("1_arltj")
font_size = 48

[node name="InitialCreate" type="Control" node_paths=PackedStringArray("story_title_input", "resource_folder_button", "create_button", "file_dialog")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3pfmw")
story_title_input = NodePath("ColorRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/StoryTitleInput")
resource_folder_button = NodePath("ColorRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ResourceFolderButton")
create_button = NodePath("ColorRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CreateButton")
file_dialog = NodePath("ColorRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/FileDialog")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1600, 800)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -800.0
offset_top = -800.0
offset_right = 800.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.207843, 0.207843, 0.207843, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Title of Story: "

[node name="StoryTitleInput" type="LineEdit" parent="ColorRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Resource Folder Location: "

[node name="ResourceFolderButton" type="Button" parent="ColorRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24

[node name="FileDialog" type="FileDialog" parent="ColorRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
title = "Open a Directory"
position = Vector2i(200, 325)
size = Vector2i(700, 400)
exclusive = false
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="CreateButton" type="Button" parent="ColorRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_font_sizes/font_size = 24
text = "Create"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 114.0
offset_top = 25.0
offset_right = 415.0
offset_bottom = 85.0
text = "Create Story"
label_settings = SubResource("LabelSettings_o07i8")

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 30.0
offset_right = 77.0
offset_bottom = 70.0
text = "Return"

[connection signal="pressed" from="ColorRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/ResourceFolderButton" to="." method="_on_resource_folder_button_pressed"]
[connection signal="dir_selected" from="ColorRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/FileDialog" to="." method="_on_file_dialog_dir_selected"]
[connection signal="pressed" from="ColorRect/MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_return_button_pressed"]
